--- a/p8105_hw3_nh2706.md
+++ b/p8105_hw3_nh2706.md
@@ -1,18 +1,28 @@
----
-title: "hw3"
-author: "Niklas Hess"
-date: "10/14/2022"
-output: github_document
----
+hw3
+================
+Niklas Hess
+10/14/2022
 
-```{r}
+``` r
 library(tidyverse)
+```
+
+    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
+    ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
+    ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
+    ## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
+    ## ✔ readr   2.1.2      ✔ forcats 0.5.2 
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+
+``` r
 library(patchwork)
 library(ggridges)
 library(p8105.datasets)
 ```
 
-```{r}
+``` r
 knitr::opts_chunk$set(echo = TRUE, 
                       warning = FALSE,
                       fig.width = 8,
@@ -22,19 +32,25 @@ knitr::opts_chunk$set(echo = TRUE,
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
 
-
 ### Load the data from the p8105.datasets
 
-```{r}
+``` r
 data("ny_noaa")
 ```
 
 ### Data description
-The data shows `r ncol(ny_noaa)` variables (`r names(ny_noaa)`) from New York state weather stations from January 1, 1981 through December 31, 2010. It has `r nrow(ny_noaa)` obersvations. Key variables include `r names(ny_noaa)[1]`, which denotes the weather station ID, and `r names(ny_noaa)[2]`, which indicates the date of each subsequent observation. Since each weather station might not collect all variables, missing data is a major issue in the context of this data.
+
+The data shows 7 variables (id, date, prcp, snow, snwd, tmax, tmin) from
+New York state weather stations from January 1, 1981 through December
+31, 2010. It has 2595176 obersvations. Key variables include id, which
+denotes the weather station ID, and date, which indicates the date of
+each subsequent observation. Since each weather station might not
+collect all variables, missing data is a major issue in the context of
+this data.
 
 ### Data cleaning.
 
-```{r}
+``` r
 clean_noaa_df = ny_noaa %>%
   janitor::clean_names() %>%
   separate(date, into = c("year", "month", "day"), sep = '-') %>%
@@ -47,13 +63,12 @@ clean_noaa_df = ny_noaa %>%
          prcp = as.numeric(prcp))
 ```
 
-
-The most commonly observed values for snowfall are 0mm, which makes sense because most of the year there is no snow-fall.
-
+The most commonly observed values for snowfall are 0mm, which makes
+sense because most of the year there is no snow-fall.
 
 ### Two-panel plot showing the average max temperature in January and in July in each station across years
 
-```{r}
+``` r
 mean_max_temp = clean_noaa_df %>%
   filter(month == "Jan" | month == "Jul") %>%  
   group_by(id, year, month) %>% 
@@ -67,16 +82,22 @@ mean_max_temp = clean_noaa_df %>%
     y = "Mean_Max_temperature",
     caption = "Data from ny_noaa") +
   theme(legend.position = "none")
+```
 
+    ## `summarise()` has grouped output by 'id', 'year'. You can override using the
+    ## `.groups` argument.
+
+``` r
 mean_max_temp
 ```
 
-  
+<img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+
 Is there any observable / interpretable structure? Any outliers?
 
-### Two-panel plot showing tmax vs tmin for the full dataset 
+### Two-panel plot showing tmax vs tmin for the full dataset
 
-```{r}
+``` r
 maxmin_plot = clean_noaa_df %>%
   ggplot(aes(x = tmax, y = tmin)) +
   geom_hex() +
@@ -86,7 +107,7 @@ maxmin_plot = clean_noaa_df %>%
        caption = "Data from NY NOAA.")
 ```
 
-```{r}
+``` r
 snowfall_plot = clean_noaa_df %>%
   filter(snow > 0, snow < 100) %>%
   ggplot(aes(x = snow, y = year)) +
@@ -96,7 +117,8 @@ snowfall_plot = clean_noaa_df %>%
        caption = "Data from NY NOAA.")
 ```
 
-```{r}
+``` r
 maxmin_plot + snowfall_plot
 ```
 
+<img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
