--- a/p8105_hw3_nh2706.md
+++ b/p8105_hw3_nh2706.md
@@ -22,15 +22,11 @@ library(ggridges)
 library(p8105.datasets)
 ```
 
-``` r
-knitr::opts_chunk$set(echo = TRUE, 
-                      warning = FALSE,
-                      fig.width = 8,
-                      fig.asp = 1,
-                      out.width = "90%")
+\#Problem 1 Omitted, as solutions are provided by Professor.
 
-theme_set(theme_minimal() + theme(legend.position = "bottom"))
-```
+\#Problem 2
+
+\#Problem 3
 
 ### Load the data from the p8105.datasets
 
@@ -56,15 +52,24 @@ clean_noaa_df = ny_noaa %>%
   separate(date, into = c("year", "month", "day"), sep = '-') %>%
   mutate(month = as.numeric(month),
          year = as.numeric(year),
-         month = month.abb[month],
-         month = factor(month, levels = month.abb),
-         tmax = as.numeric(tmax),
-         tmin = as.numeric(tmin),
-         prcp = as.numeric(prcp))
+         month = factor(month.abb[month], levels = month.abb),
+         tmax = as.numeric(tmax)/10,
+         tmin = as.numeric(tmin)/10,
+         prcp = as.numeric(prcp)/10)
 ```
 
-The most commonly observed values for snowfall are 0mm, which makes
-sense because most of the year there is no snow-fall.
+### Mode for Snow
+
+``` r
+find_mode <- function(a) {
+  value <- unique(a)
+  tab <- tabulate(match(a, value))
+  value[tab == max(tab)]
+}
+```
+
+The most commonly observed values for snowfall are 0, which makes sense
+because most of the year there is no snow-fall.
 
 ### Two-panel plot showing the average max temperature in January and in July in each station across years
 
@@ -91,7 +96,9 @@ mean_max_temp = clean_noaa_df %>%
 mean_max_temp
 ```
 
-<img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+    ## Warning: Removed 5640 row(s) containing missing values (geom_path).
+
+![](p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
 
 Is there any observable / interpretable structure? Any outliers?
 
@@ -110,7 +117,8 @@ maxmin_plot = clean_noaa_df %>%
 ``` r
 snowfall_plot = clean_noaa_df %>%
   filter(snow > 0, snow < 100) %>%
-  ggplot(aes(x = snow, y = year)) +
+  ggplot(aes(x = year, y = year)) +
+  geom_line() +
   labs(title = "Snowfall Distribution by Year (0-100 mm)",
        x = "Snowfall (mm)",
        y = "Year",
@@ -121,4 +129,6 @@ snowfall_plot = clean_noaa_df %>%
 maxmin_plot + snowfall_plot
 ```
 
-<img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+    ## Warning: Removed 1136276 rows containing non-finite values (stat_binhex).
+
+![](p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
