--- a/p8105_hw3_nh2706.md
+++ b/p8105_hw3_nh2706.md
@@ -4,22 +4,11 @@ Niklas Hess
 10/14/2022
 
 ``` r
-library(tidyverse)
-```
-
-    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-    ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
-    ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
-    ## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
-    ## ✔ readr   2.1.2      ✔ forcats 0.5.2 
-    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-    ## ✖ dplyr::filter() masks stats::filter()
-    ## ✖ dplyr::lag()    masks stats::lag()
-
-``` r
-library(patchwork)
-library(ggridges)
-library(p8105.datasets)
+knitr::opts_chunk$set(echo = TRUE) 
+knitr::opts_chunk$set(
+  fig.width = 12,
+  fig.asp = .7,
+  out.width = "90%")
 ```
 
 \#Problem 1 Omitted, as solutions are provided by Professor.
@@ -98,7 +87,7 @@ mean_max_temp
 
     ## Warning: Removed 5640 row(s) containing missing values (geom_path).
 
-![](p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
+<img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
 
 Is there any observable / interpretable structure? Any outliers?
 
@@ -111,16 +100,18 @@ maxmin_plot = clean_noaa_df %>%
   labs(title = "Max vs Min Temp over years",
        x = "Max Temp (C)",
        y = "Min Temp (C)",
-       caption = "Data from NY NOAA.")
+       caption = "Data from NY NOAA.") +
+  theme(legend.position = "left")
 ```
 
 ``` r
 snowfall_plot = clean_noaa_df %>%
   filter(snow > 0, snow < 100) %>%
-  ggplot(aes(x = year, y = year)) +
-  geom_line() +
+  ggplot(aes(x = snow, y = as.factor(year))) +
+  geom_density_ridges(scale = 1) +
+  xlim(0, 100) +
   labs(title = "Snowfall Distribution by Year (0-100 mm)",
-       x = "Snowfall (mm)",
+       x = "Snowfall",
        y = "Year",
        caption = "Data from NY NOAA.")
 ```
@@ -131,4 +122,6 @@ maxmin_plot + snowfall_plot
 
     ## Warning: Removed 1136276 rows containing non-finite values (stat_binhex).
 
-![](p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+    ## Picking joint bandwidth of 3.76
+
+<img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
