--- a/p8105_hw3_nh2706.Rmd
+++ b/p8105_hw3_nh2706.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "hw3"
+title: "HW3"
 author: "Niklas Hess"
 date: "10/14/2022"
 output: github_document
@@ -17,47 +17,89 @@ knitr::opts_chunk$set(
   out.width = "95%")
 ```
 
-#Problem 1
+# Problem 1
 Omitted, as solutions are provided by Professor. 
 
-#Problem 2
-```{r load_data_accel}
+# Problem 2
+
+#### First, I am loading and cleaning the data ahead of the next problems
+```{r load_data_accel, echo=FALSE}
 accel_df = read_csv("Data/accel_data.csv") %>%
   janitor::clean_names() %>%
-  
-  pivot_longer(
-    cols = activity_1:activity_1440,
-    names_to = "minute",
-    values_to = "activity",
-    names_prefix = "activity_"
-   ) %>%
   mutate(weekend = ifelse((day == "Saturday" | day == "Sunday"),"Weekend","Weekday"),
-         minute = as.numeric(minute),
          day = as.factor(day),
          weekend = as.factor(weekend))  %>%
   relocate(week,day_id, day,weekend)
 ```
 
-
-```{r}
+#### Second, I am calculating the activity totals and then dropping the individuals activity variables
+```{r activity_totals}
 aggregate_accel_df = accel_df %>%
+  mutate(total_activity = rowSums(accel_df[,c(5:1444)])) %>%
   group_by(day_id) %>%
-  summarize(activity)
+  relocate(week,day_id, day,weekend,total_activity) %>%
+  select(1:5)
+
+knitr::kable(aggregate_accel_df)
+```
+
+#### Third, I am showing the day activity to identify any interesting trends throughout the study period.
+```{r plot_1_accel}
+ggplot(aggregate_accel_df,aes(x = day_id, y = total_activity, color = weekend)) +
+  geom_point() +
+  geom_line() +
+  labs(
+    title = "Total Activity per day (for study period by week(end/day))",
+    x = "Day ID",
+    y = "Total Activity",
+    caption = "Visual Depiction of accel_data.csv for daily trends"
+    ) +
+  scale_x_continuous(breaks = seq(0,35,by = 5)) +
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+#### Fourth, I am converting the data to long-format, to be able to plot minutes by days
+```{r accel_long}
+accel_longer_df = accel_df %>%
+  pivot_longer(
+    cols = activity_1:activity_1440,
+    names_to = "minute",
+    values_to = "activity",
+    names_prefix = "activity_"
+    ) %>% 
+  mutate(minute = as.numeric(minute))
+```
+
+#### Firth (and last), I am plotting the long format of minutes and activity by day to show any daily trends throughout the week.
+```{r plot_2_accel}
+accel_longer_df %>%
+  ggplot(aes(x = minute, y = activity, color = day)) +
+  geom_point() +
+  geom_line(alpha = .3) +
+  scale_x_continuous(breaks = seq(0,1440,by = 60),
+                     label = seq(0,24,by = 1),
+                     limits = c(0,1440)) +
+  labs(
+    title = "24-hour Activity Time Courses for each Day",
+    x = "Minutes (Hours shown)",
+    y = "Activity",
+    caption = "Visual Depiction of accel_data.csv for trends"
+    )
 ```
 
 
 
-#Problem 3
+# Problem 3
 
-### Load the data from the p8105.datasets
+#### First, I load the data from the p8105.datasets
 ```{r load_data_nynoaa}
 data("ny_noaa")
 ```
 
-### Data description
+#### Second, I describe the Data
 The data shows `r ncol(ny_noaa)` variables (`r names(ny_noaa)`) from New York state weather stations from January 1, 1981 through December 31, 2010. It has `r nrow(ny_noaa)` obersvations. Key variables include `r names(ny_noaa)[1]`, which denotes the weather station ID, and `r names(ny_noaa)[2]`, which indicates the date of each subsequent observation. Since each weather station might not collect all variables, missing data is a major issue in the context of this data.
 
-### Data cleaning.
+#### Third, I am cleaning the data ahead of the next problems
 ```{r clean_data}
 clean_noaa_df = ny_noaa %>%
   janitor::clean_names() %>%
@@ -70,7 +112,7 @@ clean_noaa_df = ny_noaa %>%
          prcp = as.numeric(prcp)/10)
 ```
 
-### Mode for Snow
+#### Fourth, I calculate the Mode for Snow and describe the rationale in more detail
 ```{r}
 find_mode <- function(a) {
   value <- unique(a)
@@ -81,7 +123,7 @@ find_mode <- function(a) {
 
 The most commonly observed values for snowfall are `r find_mode(clean_noaa_df$snow)`, which makes sense because most of the year there is no snow-fall.
 
-### Two-panel plot showing the average max temperature in January and in July in each station across years
+#### Fifth, I graph a two-panel plot showing the average max temperature in January and in July in each station across years
 ```{r}
 mean_max_temp = clean_noaa_df %>%
   filter(month == "Jan" | month == "Jul") %>%  
@@ -100,10 +142,9 @@ mean_max_temp = clean_noaa_df %>%
 mean_max_temp
 ```
 
-  
 Is there any observable / interpretable structure? Any outliers?
 
-### Two-panel plot showing tmax vs tmin for the full dataset 
+#### Sixth, I graph a two-panel plot showing tmax vs tmin for the full dataset 
 
 ```{r}
 maxmin_plot = clean_noaa_df %>%
@@ -114,9 +155,7 @@ maxmin_plot = clean_noaa_df %>%
        y = "Min Temp (C)",
        caption = "Data from NY NOAA.") +
   theme(legend.position = "left")
-```
 
-```{r}
 snowfall_plot = clean_noaa_df %>%
   filter(snow > 0, snow < 100) %>%
   ggplot(aes(x = snow, y = as.factor(year))) +
@@ -126,8 +165,6 @@ snowfall_plot = clean_noaa_df %>%
        x = "Snowfall",
        y = "Year",
        caption = "Data from NY NOAA.")
-```
 
-```{r}
 maxmin_plot + snowfall_plot
 ```
