--- a/p8105_hw3_nh2706.md
+++ b/p8105_hw3_nh2706.md
@@ -1,7 +1,19 @@
 HW3
 ================
 Niklas Hess
-10/14/2022
+10/17/2022
+
+``` r
+library(tidyverse)
+library(p8105.datasets)
+library(ggridges)
+library(patchwork)
+knitr::opts_chunk$set(echo = TRUE) 
+knitr::opts_chunk$set(
+  fig.width = 12,
+  fig.asp = .6,
+  out.width = "95%")
+```
 
 # Problem 1
 
@@ -11,14 +23,14 @@ Omitted, as solutions are provided by Professor.
 
 #### First, I am loading and cleaning the data ahead of the next problems
 
-    ## Rows: 35 Columns: 1443
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## chr    (1): day
-    ## dbl (1442): week, day_id, activity.1, activity.2, activity.3, activity.4, ac...
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+``` r
+accel_df = read_csv("Data/accel_data.csv") %>%
+  janitor::clean_names() %>%
+  mutate(weekend = ifelse((day == "Saturday" | day == "Sunday"),"Weekend","Weekday"),
+         day = as.factor(day),
+         weekend = as.factor(weekend))  %>%
+  relocate(week,day_id, day,weekend)
+```
 
 #### Second, I am calculating the activity totals and then dropping the individuals activity variables
 
@@ -182,16 +194,9 @@ mean_max_temp = clean_noaa_df %>%
     y = "Mean_Max_temperature",
     caption = "Data from ny_noaa") +
   theme(legend.position = "none")
-```
 
-    ## `summarise()` has grouped output by 'id', 'year'. You can override using the
-    ## `.groups` argument.
-
-``` r
 mean_max_temp
 ```
-
-    ## Warning: Removed 5640 row(s) containing missing values (geom_path).
 
 <img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-2-1.png" width="95%" />
 
@@ -221,9 +226,5 @@ snowfall_plot = clean_noaa_df %>%
 
 maxmin_plot + snowfall_plot
 ```
-
-    ## Warning: Removed 1136276 rows containing non-finite values (stat_binhex).
-
-    ## Picking joint bandwidth of 3.76
 
 <img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-3-1.png" width="95%" />
