--- a/p8105_hw3_nh2706.md
+++ b/p8105_hw3_nh2706.md
@@ -25,18 +25,32 @@ Omitted, as solutions are provided by Professor.
 
 ``` r
 accel_df = read_csv("Data/accel_data.csv") %>%
+  
+  # cleaning the names, creating a new 'weekend' variable, and adjusting variable format.
   janitor::clean_names() %>%
   mutate(weekend = ifelse((day == "Saturday" | day == "Sunday"),"Weekend","Weekday"),
          day = as.factor(day),
          weekend = as.factor(weekend))  %>%
+  
+  # relocating variables in desired order
   relocate(week,day_id, day,weekend)
 ```
+
+-   The dataset contains the following key variables week, day_id, day,
+    weekend
+-   There are 35 observations and 1444 variables
+-   The dataset covers accelerometer data from an individual patient
+    over a 5 week period
 
 #### Second, I am calculating the activity totals and then dropping the individuals activity variables
 
 ``` r
 aggregate_accel_df = accel_df %>%
+  
+  # Creating a new total_activity variable
   mutate(total_activity = rowSums(accel_df[,c(5:1444)])) %>%
+  
+  #Grouping the dataset by day_id, relocating the dataset, and dropping all detailed activity variables
   group_by(day_id) %>%
   relocate(week,day_id, day,weekend,total_activity) %>%
   select(1:5)
@@ -82,6 +96,9 @@ knitr::kable(aggregate_accel_df)
 |    5 |     34 | Tuesday   | Weekday |      367824.00 |
 |    5 |     35 | Wednesday | Weekday |      445366.00 |
 
+To better understand potential trends, I am graphing the resulting data
+in the next section.
+
 #### Third, I am showing the day activity to identify any interesting trends throughout the study period.
 
 ``` r
@@ -99,11 +116,18 @@ ggplot(aggregate_accel_df,aes(x = day_id, y = total_activity, color = weekend)) 
 ```
 
 <img src="p8105_hw3_nh2706_files/figure-gfm/plot_1_accel-1.png" width="95%" />
+There are no real clear trends visible - the data shows that activity
+varies significantly and throughout all days. During the last 2 weeks of
+the study, weekend activity drops significantly, but this is not the
+case during the first 3 weeks. Further investigation will be required to
+draw clear conclusions.
 
 #### Fourth, I am converting the data to long-format, to be able to plot minutes by days
 
 ``` r
 accel_longer_df = accel_df %>%
+  
+  # adjusting data into a long format by activity and mutating variable format for next step
   pivot_longer(
     cols = activity_1:activity_1440,
     names_to = "minute",
@@ -132,6 +156,14 @@ accel_longer_df %>%
 ```
 
 <img src="p8105_hw3_nh2706_files/figure-gfm/plot_2_accel-1.png" width="95%" />
+The graph shows that activity is centered around specific times during
+the day. Most notably, during the evening between 8pm and 10pm is the
+most active time. Other active times are around 7am, 11am-12pm, and
+around 5pm. However, during the rest of the day, there is almost no
+activity. These patterns appear to show the patients daily schedules
+(from wake-up, over lunch, to evening activity) and one can conclude
+that an increase in activity during the remaining (non-sleeping) times
+could improve health outcomes.
 
 # Problem 3
 
@@ -155,6 +187,8 @@ this data.
 
 ``` r
 clean_noaa_df = ny_noaa %>%
+  
+  #Cleaning data and mutating variables to be in standard and usable format
   janitor::clean_names() %>%
   separate(date, into = c("year", "month", "day"), sep = '-') %>%
   mutate(month = as.numeric(month),
@@ -168,6 +202,7 @@ clean_noaa_df = ny_noaa %>%
 #### Fourth, I calculate the Mode for Snow and describe the rationale in more detail
 
 ``` r
+# Calcualting function for in-line r use for next sentence
 find_mode <- function(a) {
   value <- unique(a)
   tab <- tabulate(match(a, value))
@@ -182,9 +217,15 @@ because most of the year there is no snow-fall.
 
 ``` r
 mean_max_temp = clean_noaa_df %>%
+  
+  # Filtering and Grouping dataset for further use
   filter(month == "Jan" | month == "Jul") %>%  
   group_by(id, year, month) %>% 
+  
+  # Creating the mean_max_temperature variable to be graphed
   summarize(mean_temperature = mean(tmax, na.rm = TRUE)) %>%
+ 
+  #Graphing the mean_max_temperature by years, paneled by month, and grouped by ID
   ggplot(aes(x = year, y = mean_temperature, group = id)) +
   geom_line() +
   facet_grid(. ~ month) +
@@ -200,11 +241,25 @@ mean_max_temp
 
 <img src="p8105_hw3_nh2706_files/figure-gfm/unnamed-chunk-2-1.png" width="95%" />
 
-Is there any observable / interpretable structure? Any outliers?
+The graph clearly shows a number of structures:
+
+-   Mean max temps are much lower in January than July, which was
+    clearly expected
+-   The trend of January max temperatures appear to have been increasing
+    since the first observation. This fits with the global warming
+    phenomenon.
+-   Temperatures have been fluctuating significantly throughout the
+    years - somewhat regularly, max temps have been moving +- 10(C)
+    every few years. This is an interesting phenomenon and should be
+    studied closer.
+-   There are a few outlier temperature points throughout the years,
+    which likely pertain to a temperature station that experienced an
+    abnormal weather condition.
 
 #### Sixth, I graph a two-panel plot showing tmax vs tmin for the full dataset
 
 ``` r
+# Plotting left panel of the graph, which will depict min- and max-temperatures for the entire dataset
 maxmin_plot = clean_noaa_df %>%
   ggplot(aes(x = tmax, y = tmin)) +
   geom_hex() +
@@ -214,16 +269,18 @@ maxmin_plot = clean_noaa_df %>%
        caption = "Data from NY NOAA.") +
   theme(legend.position = "left")
 
+# Plotting right panel of the graph, which will depict distribution of snowfall values greater than 0 and less than 100 separately by year
 snowfall_plot = clean_noaa_df %>%
   filter(snow > 0, snow < 100) %>%
   ggplot(aes(x = snow, y = as.factor(year))) +
-  geom_density_ridges(scale = 1) +
+  geom_density_ridges(scale = 0.9) +
   xlim(0, 100) +
   labs(title = "Snowfall Distribution by Year (0-100 mm)",
        x = "Snowfall",
        y = "Year",
        caption = "Data from NY NOAA.")
 
+# Graphing both together
 maxmin_plot + snowfall_plot
 ```
 
